Archive2/1c/8d3c351c8c6724/output
main.cpp:10:32: error: use 'template' keyword to treat 'B' as a dependent template name
using alias_A = typename A<F>::B<N>::type;
                               ^
                               template 
1 error generated.
