Archive2/1c/8d3c351c8c6724/main.cpp
template<class F>
struct A{
  template<int N>
  struct B{
    using type = int;
  };
};

template<class F, int N >
using alias_A = typename A<F>::B<N>::type;
